@@ -18,76 +18,119 @@
  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
 #}
 <div class='dijitDialogPaneContentArea'>
-  <form id='add_group_form'>
-    <table style='width: 100%'>
-      
-      {# NAME #}
-      <tr>
-        <td class='label_column'>
-          <label for='group_name'>Name</label>
-        </td>
-        <td class='input_column'>
-          <input id='group_name'>
-        </td>
-      </tr>
-      
-    </table>
-  </form>
+    <form id='group_form'>
+        <table style='width: 100%'>
+
+            {# NAME #}
+            <tr>
+                <td class='label_column'>
+                    <label for='group_name'>Name</label>
+                </td>
+                <td class='input_column'>
+                    <input id='group_name'>
+                </td>
+            </tr>
+
+
+            <tr>
+                <td class='label_column'>
+                    <span>Permissions</span>
+                </td>
+                <td class='input_column'>
+                    <div id='permission_checkboxes'>
+                        <table>
+                            <thead>
+                                <tr style='font-weight: bold'>
+                                    <th style='text-align: right'>Class Name</th>
+                                    {% for action in actions %}
+                                        <th style="width: 55px;">{{ action }}</th>
+                                    {% endfor %}
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for entity in entity_types %}
+                                    <tr>
+                                        <td style='text-align: right'>{{ entity.name }}</td>
+                                        {% for action in actions %}
+                                            <td style='text-align: center'>
+                                                <input id='{{ action }}_{{ entity.name }}' name='{{ action }}_{{ entity.name }}' type='checkbox' data-dojo-type='dijit/form/CheckBox' value='Allow'>
+                                            </td>
+                                        {% endfor %}
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </td>
+            </tr>
+
+        </table>
+    </form>
 </div>
 
 <div class='dijitDialogPaneActionBar'>
-  <button id='group_add_button'>Add</button>
-  <button id='group_cancel_button'>Cancel</button>
+    <button id='group_ok_button'>Ok</button>
+    <button id='group_cancel_button'>Cancel</button>
 </div>
 
 
 <script type='text/javascript'>
-  require(['dijit/form/Form', 'dijit/form/ValidationTextBox',
-    'dojo/domReady!'], function(Form, ValidationTextBox){
+    require([
+        'dijit/registry',
+        'dijit/form/Form',
+        'dijit/form/Button',
+        'dijit/form/CheckBox',
+        'dijit/form/ValidationTextBox',
+        'dojo/ready',
+        'stalker/submitForm'
+    ], function (registry, Form, Button, CheckBox, ValidationTextBox, ready,
+                 submitForm) {
+
+        ready(function(){
+            // ********************************************************************
+            // Form
+            var group_form = new Form({
+                id: 'group_form'
+            }, 'group_form');
+            group_form.startup();
+            
+            var dialog = group_form.getParent();
+            
+            // ********************************************************************
+            // Name
+            var name_validationTextBox = new ValidationTextBox({
+                name: 'name',
+                required: true
+            }, 'group_name');
+            name_validationTextBox.startup();
+            
+            // ********************************************************************
+            // OK Button
+            var ok_button = new Button({
+                label: 'OK',
+                type: 'button',
+                onClick: function () {
+                    submitForm({
+                        dialog: dialog,
+                        form: group_form,
+                        additional_data: {},
+                        url: 'create/group',
+                        method: 'POST'
+                    });
+                }
+            }, 'group_ok_button');
+            ok_button.startup();
     
-    // ************************************************************************
-    // Form
-    var add_group_form = new Form({
-      id: 'add_group_form'
-    }, 'add_group_form');
-    add_group_form.startup();
-    
-    // ************************************************************************
-    // Name
-    var name_validationTextBox = new ValidationTextBox({
-      name: 'name',
-      required: true
-    }, 'group_name');
-    name_validationTextBox.startup();
-    
-    
-    // ************************************************************************
-    // Add Button
-    var add_button = new Button({
-      label: 'OK',
-      type: 'button',
-      onClick: function(){
-        submitForm({
-          dialog: registry.byId('add_group_dialog'),
-          form: add_group_form,
-          additional_data: {submitted: 'create'},
-          url: '{{request.route_url("add_group")}}',
-          method: 'POST'
+            // ********************************************************************
+            // Cancel Button
+            var cancel_button = new Button({
+                label: 'Cancel',
+                type: 'button',
+                onClick: function () {
+                    dialog.destroyRecursive();
+                }
+            }, 'group_cancel_button');
+            cancel_button.startup();
         });
-      }
-    }, 'group_add_button');
-    add_button.startup();
-    
-    // ************************************************************************
-    // Cancel Button
-    var cancel_button = new Button({
-      label: 'Cancel',
-      type: 'button',
-      onClick: function(){
-        registry.byId('add_group_dialog').destroyRecursive();
-      }
-    }, 'group_cancel_button');
-    cancel_button.startup();
-    
-  });
+    });
 </script>
